--- a/first-project-spring/src/main/resources/application.properties
+++ b/first-project-spring/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=first-project-spring
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
